zaciatok pisania uvodu

--- a/clanok.tex
+++ b/clanok.tex
@@ -32,11 +32,25 @@
 \maketitle
 
 \begin{abstract}
-Rozšírená realita je technológia, v ktorej vystupujú reálne prvky a počítačovo vygenerované prvky, viažuce sa k nejakej polohe alebo aktivite. Rozšírené realita ponúka to najlepšie z reálneho a digitálneho sveta. Za posledné roky sa rozšírená realita veľmi rozšírila, pretože ju podporuje väčšina smartfónov. Rozšírená realita má rôzne využitia. Môže byť využitá v medicíne, armáde, turizme, hrách alebo aj vo vzdelaní. Jej výhoda je, že v reálnom prostredí dokáže zobraziť niečo, čo sa v danom prostredí skutočne nevyskytuje. Tým pádom aplikácia s rozšírenou realitou vytvára takmer fyzický kontakt medzi študentom a prostredím s rozšírenou realitou, pretože študent vidí reálne prostredie obohatené o prostredie vygenerované počítačom. To mu umožňuje napríklad pozrieť sa na dané prostredie z rôznych uhlov. Vo vzdelaní môže rozšírená realita pomôcť študentom lepšie a ľahšie sa učiť, nakoľko okrem písaných materiálov takto majú k dispozícii aj obraz, a to v realistickej a 3D forme. V tomto článku preskúmam, akú výhodnosť a efektívnosť má rozšírená realita vo vzdelaní a v akých oblastiach vzdelania môže byť aplikovateľná.
+Rozšírená realita je technológia, v ktorej vystupujú reálne prvky a počítačovo vygenerované prvky, viažuce sa k nejakej polohe alebo aktivite. 
+Rozšírené realita ponúka to najlepšie z reálneho a digitálneho sveta. 
+Za posledné roky sa rozšírená realita veľmi rozšírila, pretože ju podporuje väčšina smartfónov. 
+Rozšírená realita má rôzne využitia. 
+Môže byť využitá v medicíne, armáde, turizme, hrách alebo aj vo vzdelaní. 
+Jej výhoda je, že v reálnom prostredí dokáže zobraziť niečo, čo sa v danom prostredí skutočne nevyskytuje. 
+Tým pádom aplikácia s rozšírenou realitou vytvára takmer fyzický kontakt medzi študentom a prostredím s rozšírenou realitou, pretože študent vidí reálne prostredie obohatené o prostredie vygenerované počítačom. 
+To mu umožňuje napríklad pozrieť sa na dané prostredie z rôznych uhlov. 
+Vo vzdelaní môže rozšírená realita pomôcť študentom lepšie a ľahšie sa učiť, nakoľko okrem písaných materiálov takto majú k dispozícii aj obraz, a to v realistickej a 3D forme. 
+V tomto článku preskúmam, akú výhodnosť a efektívnosť má rozšírená realita vo vzdelaní a v akých oblastiach vzdelania môže byť aplikovateľná.
 \end{abstract}
 
 \section{Úvod}
-Technológia stále napreduje a inak to nie je ani pri rozšírenej realite.  O rozšírenej realite sa hovorí už od 90. rokoch, no až teraz vďaka smartfónom sa stáva skutočnosťou. Rozšírená realita nám dokáže sprístupniť 2D a 3D objekty, ktoré sú späté s nejakou aktivitou alebo lokalitou. Okrem 2D alebo 3D objektov nám dokáže zobraziť aj iné digitálne prvky ako napríklad audio alebo video súbory. Rozšírená realita má aplikáciu v širokej škále rôznych sfér. V tomto článku sa budem zaoberať hlavne oblasťou vzdelania. 
+Technológia stále napreduje a inak to nie je ani pri rozšírenej realite.  
+O rozšírenej realite sa hovorí už od 90. rokoch, no až teraz vďaka smartfónom sa stáva skutočnosťou. 
+Rozšírená realita nám dokáže sprístupniť 2D a 3D objekty, ktoré sú späté s nejakou aktivitou alebo lokalitou. 
+Okrem 2D alebo 3D objektov nám dokáže zobraziť aj iné digitálne prvky ako napríklad audio alebo video súbory. 
+Rozšírená realita má aplikáciu v širokej škále rôznych sfér. V tomto článku sa budem zaoberať hlavne oblasťou vzdelania. 
+Technológie vo vzdelaní môžu ovplyvniť študentov pri aktívnom vzdelávaní sa a môžu ich motivovať, čo vedie k efektívnemu procesu učenia.\cite{Saidin2015}
 
 Motivujte čitateľa a vysvetlite, o čom píšete. Úvod sa väčšinou nedelí na časti.
 
@@ -47,7 +61,7 @@ Záverečné poznámky prináša časť~\ref{zaver}.
 
 
 
-\section{Nejaká časť} \label{nejaka}
+\section{Čo je to rozšírená realita?} \label{rozsirenaRealita}
 Z obr.~\ref{f:rozhod} je všetko jasné. 
 
 \begin{figure*}[tbh]
