dopisanie do uvodu, zacatie druhej sekcie

--- a/clanok.tex
+++ b/clanok.tex
@@ -32,7 +32,7 @@
 \maketitle
 
 \begin{abstract}
-Rozšírená realita je technológia, v ktorej vystupujú reálne prvky a počítačovo vygenerované prvky, viažuce sa k nejakej polohe alebo aktivite. 
+Rozšírená realita je technológia, v ktorej vystupujú reálne prvky a počítačovo vygenerované prvky, viažuce sa k nejakej polohe alebo aktivite.\cite{Yuen2011} 
 Rozšírené realita ponúka to najlepšie z reálneho a digitálneho sveta. 
 Za posledné roky sa rozšírená realita veľmi rozšírila, pretože ju podporuje väčšina smartfónov. 
 Rozšírená realita má rôzne využitia. 
@@ -46,12 +46,13 @@ V tomto článku preskúmam, akú výhodnosť a efektívnosť má rozšírená r
 
 \section{Úvod}
 Technológia stále napreduje a inak to nie je ani pri rozšírenej realite.  
-O rozšírenej realite sa hovorí už od 90. rokoch, no až teraz vďaka smartfónom sa stáva skutočnosťou. 
+O rozšírenej realite sa hovorí už od 90. rokov, no až teraz, vďaka smartfónom, sa stáva skutočnosťou.\cite{Yuen2011} 
+Keď sa povie rozšírená realita, myslí sa tým široká škála technológii, ktoré dokážu premietať počítačovo vytvorený obsah do prostredia reálneho sveta.\cite{Yuen2011}
 Rozšírená realita nám dokáže sprístupniť 2D a 3D objekty, ktoré sú späté s nejakou aktivitou alebo lokalitou. 
-Okrem 2D alebo 3D objektov nám dokáže zobraziť aj iné digitálne prvky ako napríklad audio alebo video súbory. 
+Okrem týchto objektov nám dokáže zobraziť aj iné digitálne prvky, ako napríklad audio alebo video súbory.\cite{Yuen2011} 
 Rozšírená realita má aplikáciu v širokej škále rôznych sfér. V tomto článku sa budem zaoberať hlavne oblasťou vzdelania. 
 Technológie vo vzdelaní môžu ovplyvniť študentov pri aktívnom vzdelávaní sa a môžu ich motivovať, čo vedie k efektívnemu procesu učenia.\cite{Saidin2015}
-
+V prvom rade sa budem venovať pozadiu problému\ref{rozsirenaRealita}.
 Motivujte čitateľa a vysvetlite, o čom píšete. Úvod sa väčšinou nedelí na časti.
 
 Uveďte explicitne štruktúru článku. Tu je nejaký príklad.
@@ -61,7 +62,12 @@ Záverečné poznámky prináša časť~\ref{zaver}.
 
 
 
-\section{Čo je to rozšírená realita?} \label{rozsirenaRealita}
+\section{Pozadie problému} \label{rozsirenaRealita}
+Vo výskume uskutočnenom Teohom a Neom (2007) respondenti hlásili, že je nudné len počúvať svojho vyučujúceho, ktorý prezentuje pred nimi.
+Študenti verili, že integrácia technológii do vzdelávania by im pomohla v učení. 
+Učitelia sa preto rozhodli vyhľadať technológie, ktoré sa dajú integrovať do vzdelávania a tým pádom môžu pomôcť študentom v aktívnom učení sa a lepšom porozumení preberaného učiva.\cite{Saidin2015}
+\subsection{Študenti a problém predstavovania si abstraktných konceptov} \label{rozsirenaRealita:abstraktneKoncepty}
+
 Z obr.~\ref{f:rozhod} je všetko jasné. 
 
 \begin{figure*}[tbh]
