--- a/literatura.bib
+++ b/literatura.bib
@@ -1,3 +1,16 @@
+@article{Yuen2011,
+  doi = {10.18785/jetde.0401.10},
+  url = {https://doi.org/10.18785/jetde.0401.10},
+  year = {2011},
+  month = jun,
+  publisher = {University of Southern Mississippi},
+  volume = {4},
+  number = {1},
+  author = {Steve Chi-Yin Yuen and Gallayanee Yaoyuneyong and Erik Johnson},
+  title = {Augmented Reality: An Overview and Five Directions for {AR} in Education},
+  journal = {Journal of Educational Technology Development and Exchange}
+}
+
 @article{Saidin2015,
   doi = {10.5539/ies.v8n13p1},
   url = {https://doi.org/10.5539/ies.v8n13p1},
