opravený úvod, pridané ďalšie subsekcie

--- a/clanok.tex
+++ b/clanok.tex
@@ -1,5 +1,3 @@
-% Metódy inžinierskej práce
-
 \documentclass[10pt,twoside,slovak,a4paper]{article}
 
 \usepackage[slovak]{babel}
@@ -48,11 +46,15 @@ V tomto článku preskúmam, akú výhodnosť a efektívnosť má rozšírená r
 Technológia stále napreduje a inak to nie je ani pri rozšírenej realite.  
 O rozšírenej realite sa hovorí už od 90. rokov, no až teraz, vďaka smartfónom, sa stáva skutočnosťou.\cite{Yuen2011} 
 Keď sa povie rozšírená realita, myslí sa tým široká škála technológii, ktoré dokážu premietať počítačovo vytvorený obsah do prostredia reálneho sveta.\cite{Yuen2011}
-Rozšírená realita nám dokáže sprístupniť 2D a 3D objekty, ktoré sú späté s nejakou aktivitou alebo lokalitou. 
-Okrem týchto objektov nám dokáže zobraziť aj iné digitálne prvky, ako napríklad audio alebo video súbory.\cite{Yuen2011} 
+Tieto technológie nám dokážu sprístupniť 2D a 3D objekty, ktoré sú späté s nejakou aktivitou alebo lokalitou. 
+Okrem týchto objektov nám dokážu zobraziť aj iné digitálne prvky, ako napríklad audio alebo video súbory.\cite{Yuen2011} 
 Rozšírená realita má aplikáciu v širokej škále rôznych sfér. V tomto článku sa budem zaoberať hlavne oblasťou vzdelania. 
-Technológie vo vzdelaní môžu ovplyvniť študentov pri aktívnom vzdelávaní sa a môžu ich motivovať, čo vedie k efektívnemu procesu učenia.\cite{Saidin2015}
-V prvom rade sa budem venovať pozadiu problému\ref{rozsirenaRealita}.
+Technológie vo vzdelaní môžu ovplyvniť študentov pri aktívnom vzdelávaní sa a môžu ich motivovať, čo vedie k efektívnemu procesu učenia sa.\cite{Saidin2015}
+Predošlé štúdie hovoria, že zaradenie technológii do vzdelávania vytvorí pasívne učenie, ak používané technológie nevytvoria podmienky pre kritické myslenie študentov.\cite{Saidin2015}
+No od svojho uvedenia preukazuje rozšírená realita dobrý potenciál na vytvorenie podmienok pre aktívne, efektívne a zmysluplné učenie.\cite{Saidin2015}
+V prvom rade sa budem venovať základnému problému, ktorý bol naznačený v úvode\ref{rozsirenaRealita}, a následne sa vyjadrím k problému študentov predstavovať si abstraktné koncepty\ref{rozsirenaRealita:abstraktneKoncepty}.
+
+
 Motivujte čitateľa a vysvetlite, o čom píšete. Úvod sa väčšinou nedelí na časti.
 
 Uveďte explicitne štruktúru článku. Tu je nejaký príklad.
@@ -62,71 +64,32 @@ Záverečné poznámky prináša časť~\ref{zaver}.
 
 
 
-\section{Pozadie problému} \label{rozsirenaRealita}
-Vo výskume uskutočnenom Teohom a Neom (2007) respondenti hlásili, že je nudné len počúvať svojho vyučujúceho, ktorý prezentuje pred nimi.
-Študenti verili, že integrácia technológii do vzdelávania by im pomohla v učení. 
+\section{Základný problém} \label{rozsirenaRealita}
+Vo výskume uskutočnenom Teohom a Neom (2007) viacerí respondenti označili za nezaživné, keď iba počúvali svojho vyučujúceho, ktorý im prednášal učivo.
+Študenti verili, že integrácia technológii do vzdelávania by im pomohla vo vzbudení záujmu o učenie a taktiež samotnom učení. 
 Učitelia sa preto rozhodli vyhľadať technológie, ktoré sa dajú integrovať do vzdelávania a tým pádom môžu pomôcť študentom v aktívnom učení sa a lepšom porozumení preberaného učiva.\cite{Saidin2015}
 \subsection{Študenti a problém predstavovania si abstraktných konceptov} \label{rozsirenaRealita:abstraktneKoncepty}
+Študenti majú problém s vednými predmetmi (napr. chémia, fyzika), pretože sú príliš abstraktné a na ich vizualizáciu je potrebná predstavivosť (Gilbert, 2004).
+To vedie k tomu, že študenti si dané učivo vysvetlia zle, pretože mu nedokážu dostatočne dobre pochopiť.
+Preto je výber správnej metódy učenia pre učiteľa kľúčova (Palmer, 2001).
+Na tento problém sa dajú využiť rôzne vizualizačné technológie, ktoré majú veľký potenciál znížiť nepochopenie u študentov (Hay et al., 2000).
+Kozhevnikov a Thornton (2007) zistili, že je možné zlepšiť predstavivosť študentov pomocou prezentovania abstraktných obrázkov, s ktorými môžu študenti manipulovať.
+Vizualizačné technológie, ktoré boli preskúmané zahrňajú animácie, virtuálne prostredia a simulácie.
 
-Z obr.~\ref{f:rozhod} je všetko jasné. 
+\section{Rozšírená realita vo vzdelaní} \label{rozsirenaVzdelanie}
 
-\begin{figure*}[tbh]
-\centering
-%\includegraphics[scale=1.0]{diagram.pdf}
-Aj text môže byť prezentovaný ako obrázok. Stane sa z neho označný plávajúci objekt. Po vytvorení diagramu zrušte znak \texttt{\%} pred príkazom \verb|\includegraphics| označte tento riadok ako komentár (tiež pomocou znaku \texttt{\%}).
-\caption{Rozhodujúci argument.}
-\label{f:rozhod}
-\end{figure*}
+\subsection{Discovery-based learning (učenie sa založené na objavovaní)} \label{rozsirenaVzdelanie:dbl}
 
+\subsection{Modelovanie objektov} \label{rozsirenaVzdelanie:modelovanie}
 
-
-\section{Iná časť} \label{ina}
-
-Základným problémom je teda\ldots{} Najprv sa pozrieme na nejaké vysvetlenie (časť~\ref{ina:nejake}), a potom na ešte nejaké (časť~\ref{ina:nejake}).\footnote{Niekedy môžete potrebovať aj poznámku pod čiarou.}
-
-Môže sa zdať, že problém vlastne nejestvuje\cite{Coplien:MPD}, ale bolo dokázané, že to tak nie je~\cite{Czarnecki:Staged, Czarnecki:Progress}. Napriek tomu, aj dnes na webe narazíme na všelijaké pochybné názory\cite{PLP-Framework}. Dôležité veci možno \emph{zdôrazniť kurzívou}.
-
-
-\subsection{Nejaké vysvetlenie} \label{ina:nejake}
-
-Niekedy treba uviesť zoznam:
-
-\begin{itemize}
-\item jedna vec
-\item druhá vec
-	\begin{itemize}
-	\item x
-	\item y
-	\end{itemize}
-\end{itemize}
-
-Ten istý zoznam, len číslovaný:
-
-\begin{enumerate}
-\item jedna vec
-\item druhá vec
-	\begin{enumerate}
-	\item x
-	\item y
-	\end{enumerate}
-\end{enumerate}
-
-
-\subsection{Ešte nejaké vysvetlenie} \label{ina:este}
+\subsection{Trénovanie zručností} \label{rozsirenaVzdelanie:zrucnosti}
 
 \paragraph{Veľmi dôležitá poznámka.}
 Niekedy je potrebné nadpisom označiť odsek. Text pokračuje hneď za nadpisom.
 
 
 
-\section{Dôležitá časť} \label{dolezita}
-
-
-
-
-\section{Ešte dôležitejšia časť} \label{dolezitejsia}
-
-
+\section{Budúcnosť rozšírenej reality a vzdelania} \label{rozsirenaBuducnost}
 
 
 \section{Záver} \label{zaver} % prípadne iný variant názvu
