oprava sekcii, začatie písanie tretej sekcie

--- a/clanok.tex
+++ b/clanok.tex
@@ -1,4 +1,4 @@
-\documentclass[10pt,twoside,slovak,a4paper]{article}
+\documentclass[10pt,oneside,slovak,a4paper]{article}
 
 \usepackage[slovak]{babel}
 %\usepackage[T1]{fontenc}
@@ -11,7 +11,7 @@
 \usepackage{cite}
 %\usepackage{times}
 
-\pagestyle{headings}
+\pagestyle{myheadings}
 
 \title{Využitie rozšírenej reality vo vzdelaní\thanks{Semestrálny projekt v predmete Metódy inžinierskej práce, ak. rok 2020/21, vedenie: Ing. Fedor Lehocki, PhD}} 
 
@@ -30,7 +30,7 @@
 \maketitle
 
 \begin{abstract}
-Rozšírená realita je technológia, v ktorej vystupujú reálne prvky a počítačovo vygenerované prvky, viažuce sa k nejakej polohe alebo aktivite.\cite{Yuen2011} 
+Rozšírená realita je technológia, v ktorej vystupujú reálne prvky a počítačovo vygenerované prvky, viažuce sa k nejakej polohe alebo aktivite.
 Rozšírené realita ponúka to najlepšie z reálneho a digitálneho sveta. 
 Za posledné roky sa rozšírená realita veľmi rozšírila, pretože ju podporuje väčšina smartfónov. 
 Rozšírená realita má rôzne využitia. 
@@ -50,33 +50,40 @@ Tieto technológie nám dokážu sprístupniť 2D a 3D objekty, ktoré sú spät
 Okrem týchto objektov nám dokážu zobraziť aj iné digitálne prvky, ako napríklad audio alebo video súbory.\cite{Yuen2011} 
 Rozšírená realita má aplikáciu v širokej škále rôznych sfér. V tomto článku sa budem zaoberať hlavne oblasťou vzdelania. 
 Technológie vo vzdelaní môžu ovplyvniť študentov pri aktívnom vzdelávaní sa a môžu ich motivovať, čo vedie k efektívnemu procesu učenia sa.\cite{Saidin2015}
-Predošlé štúdie hovoria, že zaradenie technológii do vzdelávania vytvorí pasívne učenie, ak používané technológie nevytvoria podmienky pre kritické myslenie študentov.\cite{Saidin2015}
-No od svojho uvedenia preukazuje rozšírená realita dobrý potenciál na vytvorenie podmienok pre aktívne, efektívne a zmysluplné učenie.\cite{Saidin2015}
-V prvom rade sa budem venovať základnému problému, ktorý bol naznačený v úvode\ref{rozsirenaRealita}, a následne sa vyjadrím k problému študentov predstavovať si abstraktné koncepty\ref{rozsirenaRealita:abstraktneKoncepty}.
+Predošlé štúdie však hovoria, že zaradenie technológii do vzdelávania vytvorí pasívne učenie, ak používané technológie nevytvoria podmienky pre kritické myslenie študentov.\cite{Saidin2015}
+Tu nastupuje rozšírená realita.
+Od svojho uvedenia preukazuje rozšírená realita dobrý potenciál na vytvorenie podmienok pre aktívne, efektívne a zmysluplné učenie.\cite{Saidin2015}
+\\\\V prvom rade sa budem venovať základnému problému, ktorý bol naznačený v úvode\ref{zakladnyProblem}, kde rozoberiem prečo sú technológie vo vzdelaní dôležité.
+Ďalej sa pozriem na konkrétnu technológiu, ktorá má vo vzdelaní veľký potenciál - rozšírenú realitu\ref{rozsirenaVzdelanie}.
 
 
-Motivujte čitateľa a vysvetlite, o čom píšete. Úvod sa väčšinou nedelí na časti.
-
-Uveďte explicitne štruktúru článku. Tu je nejaký príklad.
-Základný problém, ktorý bol naznačený v úvode, je podrobnejšie vysvetlený v časti~\ref{nejaka}.
-Dôležité súvislosti sú uvedené v častiach~\ref{dolezita} a~\ref{dolezitejsia}.
-Záverečné poznámky prináša časť~\ref{zaver}.
-
-
-
-\section{Základný problém} \label{rozsirenaRealita}
+\section{Základný problém} \label{zakladnyProblem}
 Vo výskume uskutočnenom Teohom a Neom (2007) viacerí respondenti označili za nezaživné, keď iba počúvali svojho vyučujúceho, ktorý im prednášal učivo.
 Študenti verili, že integrácia technológii do vzdelávania by im pomohla vo vzbudení záujmu o učenie a taktiež samotnom učení. 
 Učitelia sa preto rozhodli vyhľadať technológie, ktoré sa dajú integrovať do vzdelávania a tým pádom môžu pomôcť študentom v aktívnom učení sa a lepšom porozumení preberaného učiva.\cite{Saidin2015}
-\subsection{Študenti a problém predstavovania si abstraktných konceptov} \label{rozsirenaRealita:abstraktneKoncepty}
-Študenti majú problém s vednými predmetmi (napr. chémia, fyzika), pretože sú príliš abstraktné a na ich vizualizáciu je potrebná predstavivosť (Gilbert, 2004).
+Obzvlášť mladí ľudia milujú moderné technológie, tak prečo ich nevyužiť nielen pre zábavu, ale aj pre účely vzdelávania? 
+Študenti nie sú spokojní so zastaranými spôsobmi, ktoré vo vzdelávaní máme už niekoľko desiatok rokov.
+Preto je integrácia technológií do vzdelania potrebná, ba až žiaduca. 
+\subsection{Študenti a problém predstavovania si abstraktných konceptov} \label{zakladnyProblem:abstraktneKoncepty}
+Študenti majú problém s vednými predmetmi (napr. chémia, fyzika), pretože sú príliš abstraktné a na vizualizáciu jednotlivých učív je potrebná dobrá predstavivosť (Gilbert, 2004).
 To vedie k tomu, že študenti si dané učivo vysvetlia zle, pretože mu nedokážu dostatočne dobre pochopiť.
-Preto je výber správnej metódy učenia pre učiteľa kľúčova (Palmer, 2001).
+Preto je výber správnej metódy učenia pre učiteľa kľúčová (Palmer, 2001).
 Na tento problém sa dajú využiť rôzne vizualizačné technológie, ktoré majú veľký potenciál znížiť nepochopenie u študentov (Hay et al., 2000).
+Medzi vizualizačné technológie, ktoré boli preskumané a preukazali veľkú úspešnosť, patria animácie, virtuálne prostredia a simulácie.
 Kozhevnikov a Thornton (2007) zistili, že je možné zlepšiť predstavivosť študentov pomocou prezentovania abstraktných obrázkov, s ktorými môžu študenti manipulovať.
-Vizualizačné technológie, ktoré boli preskúmané zahrňajú animácie, virtuálne prostredia a simulácie.
-
+Robertson a jeho kolegovia (2008) zistili, že animácie spolu so zaujímavými dátami a dobrým učiteľom pomáhajú študentom udržať pozornosť a záujem.\cite{Saidin2015}
+\subsection{Technológie pre vizualizáciu abstraktných konceptov} \label{zakladnyProblem:technologie}
+Vizualizačné technológie umožňujú študentom vidieť veci, reakcie, deje, ktoré sú príliš rýchle, pomalé, malé alebo veľké (Cook, 2006).
+Napríklad v chémii to študentom umožňuje vidieť jednotlivé reakcie medzi molekulami.
+Tieto procesy sú abstraktné a bez vizualizačných technológii ťažké na predstavenie.\cite{Saidin2015}\\
+\\V dnešnej dobe sa rozšírená realita ponúka ako najlepšia vizualizačná technológia pre vzdelanie.
+Rozšírená realita je nová technológia, ktorá bude mať v budúcnosti s najväčšou pravdepodobnosťou významný dopad na vzdelanie (Martin, 2011).\cite{Saidin2015}
 \section{Rozšírená realita vo vzdelaní} \label{rozsirenaVzdelanie}
+Ako som už vyššie spomínal, rozšírená realita má naozaj mnoho využití. 
+Poďme sa pozrieť na jej využitie vo vzdelaní.
+Z mojej skúsenosti študenti radi skúšajú nové metódy výučby.
+A teda nie je prekvapením, že rôzne štúdie dokázali, že študenti si pochvaľujú túto novú technológiu vo vzdelaní.\cite{Saidin2015}
+Integrovanie rozšírenej reality môže vzdelávaniu vdychnúť nový život.
 
 \subsection{Discovery-based learning (učenie sa založené na objavovaní)} \label{rozsirenaVzdelanie:dbl}
 
