novy zdroj dopisanie do 2 sek.,opravenie chyb

--- a/clanok.tex
+++ b/clanok.tex
@@ -7,7 +7,7 @@
 \usepackage{graphicx}
 \usepackage{url} % príkaz \url na formátovanie URL
 \usepackage{hyperref} % odkazy v texte budú aktívne (pri niektorých triedach dokumentov spôsobuje posun textu)
-
+\usepackage{multirow}
 \usepackage{cite}
 %\usepackage{times}
 
@@ -54,57 +54,79 @@ Predošlé štúdie však hovoria, že zaradenie technológii do vzdelávania vy
 Tu nastupuje rozšírená realita.
 Od svojho uvedenia preukazuje rozšírená realita dobrý potenciál na vytvorenie podmienok pre aktívne, efektívne a zmysluplné učenie.\cite{Saidin2015}
 \\\\V prvom rade sa budem venovať základnému problému, ktorý bol naznačený v úvode\ref{zakladnyProblem}, kde rozoberiem prečo sú technológie vo vzdelaní dôležité.
-Ďalej sa pozriem na konkrétnu technológiu, ktorá má vo vzdelaní veľký potenciál - rozšírenú realitu\ref{rozsirenaVzdelanie}.
+Ďalej sa pozriem na učenie sa s technológiami (technology-enhanced learning)\ref{tel}.
+A následne rozoberiem konkrétnu technológiu, ktorá má vo vzdelaní veľký potenciál - rozšírenú realitu\ref{rozsirenaVzdelanie}.
 
 
 \section{Základný problém} \label{zakladnyProblem}
-Vo výskume uskutočnenom Teohom a Neom (2007) viacerí respondenti označili za nezaživné, keď iba počúvali svojho vyučujúceho, ktorý im prednášal učivo.
+Vo výskume uskutočnenom Teohom a Neom (2007) viacerí respondenti označili za nezaživné, keď iba počúvali svojho vyučujúceho, ktorý im prednášal učivo.\cite{Saidin2015}
 Študenti verili, že integrácia technológii do vzdelávania by im pomohla vo vzbudení záujmu o učenie a taktiež samotnom učení. 
-Učitelia sa preto rozhodli vyhľadať technológie, ktoré sa dajú integrovať do vzdelávania a tým pádom môžu pomôcť študentom v aktívnom učení sa a lepšom porozumení preberaného učiva.\cite{Saidin2015}
+Učitelia sa preto rozhodli vyhľadať technológie, ktoré sa dajú integrovať do vzdelávania a tým pádom môžu pomôcť študentom v aktívnom učení sa a lepšom porozumení preberaného učiva.
 Obzvlášť mladí ľudia milujú moderné technológie, tak prečo ich nevyužiť nielen pre zábavu, ale aj pre účely vzdelávania? 
 Študenti nie sú spokojní so zastaranými spôsobmi, ktoré vo vzdelávaní máme už niekoľko desiatok rokov.
 Preto je integrácia technológií do vzdelania potrebná, ba až žiaduca. 
 \subsection{Študenti a problém predstavovania si abstraktných konceptov} \label{zakladnyProblem:abstraktneKoncepty}
-Študenti majú problém s vednými predmetmi (napr. chémia, fyzika), pretože sú príliš abstraktné a na vizualizáciu jednotlivých učív je potrebná dobrá predstavivosť (Gilbert, 2004).
-To vedie k tomu, že študenti si dané učivo vysvetlia zle, pretože mu nedokážu dostatočne dobre pochopiť.
-Preto je výber správnej metódy učenia pre učiteľa kľúčová (Palmer, 2001).
-Na tento problém sa dajú využiť rôzne vizualizačné technológie, ktoré majú veľký potenciál znížiť nepochopenie u študentov (Hay et al., 2000).
+Študenti majú problém s vednými predmetmi (napr. chémia, fyzika), pretože sú príliš abstraktné a na vizualizáciu jednotlivých učív je potrebná dobrá predstavivosť.\cite{Saidin2015}
+To vedie k tomu, že študenti si dané učivo vysvetlia zle, pretože ho nedokážu dostatočne dobre pochopiť.
+Preto je výber správnej metódy učenia pre učiteľa kľúčový.
+Na tento problém sa dajú využiť rôzne vizualizačné technológie, ktoré majú veľký potenciál znížiť nepochopenie u študentov.
 Medzi vizualizačné technológie, ktoré boli preskumané a preukazali veľkú úspešnosť, patria animácie, virtuálne prostredia a simulácie.
-Kozhevnikov a Thornton (2007) zistili, že je možné zlepšiť predstavivosť študentov pomocou prezentovania abstraktných obrázkov, s ktorými môžu študenti manipulovať.
-Robertson a jeho kolegovia (2008) zistili, že animácie spolu so zaujímavými dátami a dobrým učiteľom pomáhajú študentom udržať pozornosť a záujem.\cite{Saidin2015}
+Kozhevnikov a Thornton zistili, že je možné zlepšiť predstavivosť študentov pomocou prezentovania abstraktných obrázkov, s ktorými môžu študenti manipulovať.
+Robertson a jeho kolegovia zistili, že animácie spolu so zaujímavými dátami a dobrým učiteľom pomáhajú študentom udržať pozornosť a záujem.
 \subsection{Technológie pre vizualizáciu abstraktných konceptov} \label{zakladnyProblem:technologie}
-Vizualizačné technológie umožňujú študentom vidieť veci, reakcie, deje, ktoré sú príliš rýchle, pomalé, malé alebo veľké (Cook, 2006).
+Vizualizačné technológie umožňujú študentom vidieť veci, reakcie, deje, ktoré sú príliš rýchle, pomalé, malé alebo veľké.\cite{Saidin2015}
 Napríklad v chémii to študentom umožňuje vidieť jednotlivé reakcie medzi molekulami.
-Tieto procesy sú abstraktné a bez vizualizačných technológii ťažké na predstavenie.\cite{Saidin2015}\\
-\\V dnešnej dobe sa rozšírená realita ponúka ako najlepšia vizualizačná technológia pre vzdelanie.
-Rozšírená realita je nová technológia, ktorá bude mať v budúcnosti s najväčšou pravdepodobnosťou významný dopad na vzdelanie (Martin, 2011).\cite{Saidin2015}
+Tieto procesy sú abstraktné a bez vizualizačných technológii ťažké na predstavenie.
+\\\\
+Vizualizačné technológie teda predstavujú nový spôsob, akým sa študenti môžu vzdelávať.
+Učenie sa s vizualizačnými technológiami je pre študentov oveľa záživnejšie ako len čítanie si teórie, a zároveň im takáto výučba zaručí udržanie pozornosti na dlhšiu dobu.
+Medzi vizualizačné technológie patria napríklad videá, animácie, virtuálna realita alebo rozšírená realita.
+
+\section{Technology-enhanced learning (TEL)} \label{tel}
+Technology Enhanced Learning (skratka TEL) predstavuje využitie technológií ako napríklad počítačov, smartfónov, interaktívnej tabule, rozšírenej reality a pod. v rámci procesu vzdelávania, na zefektívnenie a modernizáciu tohto procesu.\cite{TEL} 
+TEL môže zlepšiť pochopenie u študentov, ponúknuť im väčšiu flexibilitu alebo taktiež podporiť spoluprácu a komunikáciu. 
+Okrem toho TEL podporuje aj rozvoj počítačových zručností, ktoré táto digitálna doba vyžaduje. 
+Môže byť použitý v rámci triedy, ako kombinované vzdelávanie alebo aj na dištančné štúdium.
+\subsection{Predpoklady pre TEL} \label{tel:predpoklady}
+TEL v sebe ukrýva veľký potenciál.\cite{Daniela2018}  
+Jeho využitie je však podmienené istými faktormi, a to najmä kompetenciami učiteľa s danými technológiami narábať, a efektívne ich používať tam, kde je to vhodné a slúžiace zlepšeniu študijných výsledkov.
+Taktiež môžeme spomenúť isté kompetencie vyžadujúce sa od študentov, no v tomto platí pravidlo, čím mladšia generácia, tým zdatnejšia v oblasti IKT. 
+A v neposlednom rade je nevyhnutná spolupráca samotného vedenia školy, ktoré zaobstará potrebné vybavenie do školských zariadení. 
+Okrem tejto technickej podpory by malo uskutočniť aj podporu administratívnu, t. j. rôzne školenia zamerané na rozvoj kritického myslenia a správne využitie digitálnych technológií ako pre zábavu, tak aj pre štúdium.
+\\\\V dnešnej dobe sa rozšírená realita ponúka ako najlepšia vizualizačná technológia pre vzdelanie.
+Rozšírená realita je nová technológia, ktorá bude mať v budúcnosti s najväčšou pravdepodobnosťou významný dopad na vzdelanie.\cite{Saidin2015} 
 \section{Rozšírená realita vo vzdelaní} \label{rozsirenaVzdelanie}
 Ako som už vyššie spomínal, rozšírená realita má naozaj mnoho využití. 
-Poďme sa pozrieť na jej využitie vo vzdelaní.
+Poďme sa pozrieť na jej využitie vo vzdelaní.\\\\
 Z mojej skúsenosti študenti radi skúšajú nové metódy výučby.
 A teda nie je prekvapením, že rôzne štúdie dokázali, že študenti si pochvaľujú túto novú technológiu vo vzdelaní.\cite{Saidin2015}
-Integrovanie rozšírenej reality môže vzdelávaniu vdychnúť nový život.
+Vďaka rozšírenej realite a jej interaktívným aplikáciam sa študenti učia aktívnejšie.
+To teda prispieva aj ku kritickému a kreatívnemu rozmýšľaniu študentov.
 
+\begin{table}[h]
+	\begin{tabular}{|l|l|}
+	\hline
+	Autor                 & \multicolumn{1}{c|}{Výhody rozšírenej reality}                                                                                                         \\ \hline
+	Singhal et al. (2012) & \begin{tabular}[c]{@{}l@{}}Podporuje interakciu medzi skutočným a virtuálnym\\ prostredím a tým umožňuje manipuláciu objektov v priestore\end{tabular} \\ \hline
+	Coffin et al. (2008)  & Ponúka učiteľom spôsob ako zlepšiť chápanie u študentov                                                                                                \\ \hline
+	Burton et al. (2011)  & Ponúka študentom lepšie možnosti učenia aj mimo školy                                                                                                  \\ \hline
+	\end{tabular}
+\caption{Výhody rozšírenej reality\cite{Saidin2015}}
+\label{rozsirenaVyhody}
+\end{table}
+
+V tabuľke \ref{rozsirenaVyhody} môžeme vidieť, aké výhody rozšírenej reality vnímajú rôzni autori zaoberajúci sa touto tématikou.
+Integrovanie rozšírenej reality môže vzdelávaniu vdychnúť nový život.
 \subsection{Discovery-based learning (učenie sa založené na objavovaní)} \label{rozsirenaVzdelanie:dbl}
 
 \subsection{Modelovanie objektov} \label{rozsirenaVzdelanie:modelovanie}
 
 \subsection{Trénovanie zručností} \label{rozsirenaVzdelanie:zrucnosti}
 
-\paragraph{Veľmi dôležitá poznámka.}
-Niekedy je potrebné nadpisom označiť odsek. Text pokračuje hneď za nadpisom.
-
-
-
 \section{Budúcnosť rozšírenej reality a vzdelania} \label{rozsirenaBuducnost}
 
 
 \section{Záver} \label{zaver} % prípadne iný variant názvu
-
-
-
-%\acknowledgement{Ak niekomu chcete poďakovať\ldots}
-
 
 % týmto sa generuje zoznam literatúry z obsahu súboru literatura.bib podľa toho, na čo sa v článku odkazujete
 \bibliography{literatura}
