--- a/literatura.bib
+++ b/literatura.bib
@@ -23,3 +23,22 @@
   title = {A Review of Research on Augmented Reality in Education: Advantages and Applications},
   journal = {International Education Studies}
 }
+
+@article{Daniela2018,
+  doi = {10.3390/su10113883},
+  url = {https://doi.org/10.3390/su10113883},
+  year = {2018},
+  month = oct,
+  publisher = {{MDPI} {AG}},
+  volume = {10},
+  number = {11},
+  pages = {3883},
+  author = {Linda Daniela and Anna Visvizi and Calixto Guti{\'{e}}rrez-Braojos and Miltiadis Lytras},
+  title = {Sustainable Higher Education and Technology-Enhanced Learning ({TEL})},
+  journal = {Sustainability}
+}
+
+@misc{TEL,
+  title = "Technology enhanced learning",
+  url = "https://www.staffs.ac.uk/support_depts/adu/tel/"
+}
